Fix: 카드 hover 상태 - 테두리 안 맞는 문제 수정 및 헤더 z-index 추가

--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -7,6 +7,8 @@
   cursor: pointer;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
+  z-index: 1;
 }
 
 .cardContainer:hover {
@@ -18,7 +20,6 @@
 }
 
 .cardImage {
-  border-radius: 15px 15px 0 0;
   object-fit: cover;
   width: 100%;
   height: 20rem;
@@ -28,7 +29,6 @@
   overflow: hidden;
   background: #dddfff;
   width: 100%;
-  border-radius: 1.5rem 1.5rem 0 0;
   height: 20rem;
   display: flex;
   align-items: center;
