--- a/src/components/common/header.css
+++ b/src/components/common/header.css
@@ -8,6 +8,7 @@ header {
   position: fixed;
   justify-content: center;
   min-height: 9.4rem;
+  z-index: 10;
 }
 
 .contentContainer {
